force-app/main/default/objects/Employee_Request__c/Employee_Request__c.object-meta.xml
<CustomObject>
    <label>Employee Request</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Employee Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>