force-app/main/default/objects/Employee_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employee Requests (Approver)</relationshipLabel>
    <relationshipName>Employee_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>