force-app/main/default/objects/Employee_Request__c/fields/Available_Seats_Morning__c.field-meta.xml
<CustomField>
    <fullName>Available_Seats_Morning__c</fullName>
    <formula>Location_Booking__r.Seats_Available_Morning__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Seats Morning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>