force-app/main/default/objects/Employee_Request__c/fields/Date_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Request__c</fullName>
    <formula>Location_Booking__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Request</label>
    <type>Date</type>
</CustomField>