force-app/main/default/objects/Employee_Request__c/fields/Denied_Checkin_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denied_Checkin_Reason__c</fullName>
    <label>Denied Check In Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temperature above legal limits</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>