force-app/main/default/objects/Employee_Request__c/fields/Description_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Request__c</fullName>
    <label>Description of Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>