force-app/main/default/objects/Employee_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employee Requests</relationshipLabel>
    <relationshipName>Employee_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>