force-app/main/default/objects/Employee_Request__c/fields/Executive_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Executive_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Approval Needed</label>
    <type>Checkbox</type>
</CustomField>