force-app/main/default/objects/Employee_Request__c/fields/Gloves__c.field-meta.xml
<CustomField>
    <fullName>Gloves__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gloves</label>
    <type>Checkbox</type>
</CustomField>