force-app/main/default/objects/Employee_Request__c/fields/High_Risk_Zone__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Risk Zone</label>
    <type>Checkbox</type>
</CustomField>