force-app/main/default/objects/Employee_Request__c/fields/Location_Booking__c.field-meta.xml
<CustomField>
    <fullName>Location_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Booking</label>
    <referenceTo>Location_Daily_Info__c</referenceTo>
    <relationshipLabel>Employee Requests</relationshipLabel>
    <relationshipName>Employee_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>