force-app/main/default/objects/Employee_Request__c/fields/Mask__c.field-meta.xml
<CustomField>
    <fullName>Mask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mask</label>
    <type>Checkbox</type>
</CustomField>