force-app/main/default/objects/Employee_Request__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IF( ISPICKVAL(Status__c,&quot;Approved&quot;)||ISPICKVAL(Status__c,&quot;Checked in&quot;)||ISPICKVAL(Status__c,&quot;Check out&quot;) ,
IMAGE(&apos;https://chart.apis.google.com/chart?cht=qr&amp;chs=150x150&amp;chl=salesforce1://sObject/&apos; &amp;  Id &amp; &apos;/view&apos; &amp; &apos;&amp;chld=H|0&apos;, &apos;QRCode&apos;, 150, 150),
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>