force-app/main/default/objects/Employee_Request__c/fields/QR_Code_Text_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Text_URL__c</fullName>
    <formula>IF( ISPICKVAL(Status__c,&quot;Approved&quot;)||ISPICKVAL(Status__c,&quot;Checked in&quot;)||ISPICKVAL(Status__c,&quot;Check out&quot;) ,
&apos;https://chart.apis.google.com/chart?cht=qr&amp;chs=150x150&amp;chl=https//seat-booking-demo.lightning.force.com/&apos; &amp; Id &amp; &apos;&amp;chld=H|0&apos;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code Text URL</label>
    <type>Text</type>
</CustomField>