force-app/main/default/objects/Employee_Request__c/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <label>Reason for Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer related activities</fullName>
            </value>
            <value>
                <fullName>Use of office assets</fullName>
            </value>
            <value>
                <fullName>Other...</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>