force-app/main/default/objects/Employee_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Access Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Temperature Above Legal Threshold</fullName>
            </value>
            <value>
                <fullName>Resident in Red Zone</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>