force-app/main/default/objects/Employee_Request__c/fields/Requested_Slot__c.field-meta.xml
<CustomField>
    <fullName>Requested_Slot__c</fullName>
    <label>Requested Slot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>