force-app/main/default/objects/Employee_Request__c/fields/Self_Quarantined__c.field-meta.xml
<CustomField>
    <fullName>Self_Quarantined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Quarantined</label>
    <type>Checkbox</type>
</CustomField>