force-app/main/default/objects/Employee_Request__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temperature</label>
    <type>Checkbox</type>
</CustomField>