force-app/main/default/objects/Employee_Request__c/fields/Temperature_Self_check__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Self_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temperature Self-check</label>
    <type>Checkbox</type>
</CustomField>