force-app/main/default/objects/Employee_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Requested_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>