force-app/main/default/objects/Employee_Request__c/listViews/My_Requests.listView-meta.xml
<ListView>
    <fullName>My_Requests</fullName>
    <columns>NAME</columns>
    <columns>Requested_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>Requested_Slot__c</columns>
    <columns>Reason_for_Request__c</columns>
    <columns>Business_Critical__c</columns>
    <columns>High_Risk_Zone__c</columns>
    <columns>Self_Quarantined__c</columns>
    <columns>Temperature_Self_check__c</columns>
    <columns>Privacy_Policy__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Requests</label>
</ListView>