force-app/main/default/objects/Employee_Request__c/listViews/Today_Requests.listView-meta.xml
<ListView>
    <fullName>Today_Requests</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>Reason_for_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Date_of_Request__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Approved Requests</label>
</ListView>